bk_ida/gccida/c0/subst_constants
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2945:4: error: expected ';' after expression
rtx op0; // [rsp+48h] [rbp-B8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2945:5: error: use of undeclared identifier 'op0'
rtx op0; // [rsp+48h] [rbp-B8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2946:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+54h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2948:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_mode; // [rsp+6Ch] [rbp-94h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2949:4: error: expected ';' after expression
rtx tem; // [rsp+70h] [rbp-90h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2949:5: error: use of undeclared identifier 'tem'
rtx tem; // [rsp+70h] [rbp-90h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2950:4: error: expected ';' after expression
rtx src; // [rsp+78h] [rbp-88h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2950:5: error: use of undeclared identifier 'src'
rtx src; // [rsp+78h] [rbp-88h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2951:4: error: expected ';' after expression
rtx srca; // [rsp+78h] [rbp-88h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2951:5: error: use of undeclared identifier 'srca'
rtx srca; // [rsp+78h] [rbp-88h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2952:4: error: expected ';' after expression
rtx dest; // [rsp+80h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2952:5: error: use of undeclared identifier 'dest'
rtx dest; // [rsp+80h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2955:4: error: expected ';' after expression
rtx inner; // [rsp+98h] [rbp-68h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2955:5: error: use of undeclared identifier 'inner'
rtx inner; // [rsp+98h] [rbp-68h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2958:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+ACh] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2959:4: error: expected ';' after expression
rtx newa; // [rsp+B0h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2959:5: error: use of undeclared identifier 'newa'
rtx newa; // [rsp+B0h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2962:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+CCh] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/integrate.c:2965:4: error: expected ';' after expression
rtx x; // [rsp+D8h] [rbp-28h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_constants/src/obj/integrate.o] Error 1
